--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "classnames": "2.2.6",
     "react": "16.8.0",
     "react-dom": "16.8.0",
     "react-redux": "6.0.1",
