copy icon svg added

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "16.8.0",
     "react-redux": "6.0.1",
     "react-scripts": "2.0.3",
+    "react-svg-loader": "2.1.0",
     "redux": "4.0.1",
     "unique-string": "1.0.0"
   },
