--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "2.0.3",
     "react-svg-loader": "2.1.0",
     "redux": "4.0.1",
+    "source-map-explorer": "1.7.0",
     "unique-string": "1.0.0"
   },
   "devDependencies": {},
@@ -19,12 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyze": "source-map-explorer build/static/js/main.*"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
